--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity" />
+        <activity android:name=".GameActivity"
+            android:theme="@android:style/Theme.NoTitleBar"/>
         <activity android:name=".SettingsActivity" />
         <activity android:name=".HighScoreActivity"></activity>
     </application>
